# missed-callback-ai

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  railway.json
backend/app/: config.py  main.py  security.py  supabase_client.py  twilio_routes.py  vapi_client.py  vapi_routes.py
frontend/: .env.example  .gitignore  package-lock.json  package.json  railway.json  tailwind.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/app/calls/: page.tsx
frontend/app/leads/: page.tsx
frontend/components/: AudioPlayer.tsx  Avatar.tsx  BarChart.tsx  CallDetailsModal.tsx  CallsTable.tsx  ConfigBanner.tsx  DonutChart.tsx  EmptyState.tsx  ErrorBanner.tsx  KpiCard.tsx  LeadDetailsModal.tsx  LeadsTable.tsx  LineChart.tsx  ModalShell.tsx  PageHeader.tsx  QuickActions.tsx  RecentCallsList.tsx  RecentLeadsList.tsx  SectionCard.tsx  Sidebar.tsx  Sparkline.tsx  StatCard.tsx  StatusBadge.tsx  TranscriptView.tsx
frontend/lib/: avatar.ts  format.ts  queries.ts  supabase.ts  transcript.ts  types.ts
supabase/: config.toml
supabase/migrations/: 20260504123229_create_leads.sql  20260505000000_add_missed_call_count.sql  20260514000000_create_calls.sql  20260515000000_anon_read_policies.sql
